[package]
name = "generate-exchanges"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
rusty-money = { version = "0.4", default-features = false }
rust_decimal = { version = "1.14", features = ["maths"] }
once_cell = "1.6"
